2003-07-21  Al Riddoch  <alriddoch@zepler.org>

	* Tweak configure.in to be a little more compatable with older
	  autoconf.

2003-07-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h: Add accessor for the size member.

	* Mercator/Buffer.h, Mercator/Buffer.cpp, Mercator/Surface.h,
	  Mercator/Surface.cpp: Make a base class for handling
	  float buffers for vertex, texture coord and colour data.
	  Use it as the basis for Surface.

	* Mercator/Shader.h, Mercator/Shader.cpp: Place holder for shaders
	  which implement rules creating a surface from the segment height
	  data according to a rule.

2003-07-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp: Free the float buffers using the correct
	  array delete operator.

2003-07-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Allocate point data on the
	  fly.  Use m_res and m_size in the terrain population functions rather
	  than recalculating, or passing values.

2003-07-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Surface.h, Mercator/Surface.cpp: Make surface class a little
	  more flexible by paramaterising the number of channels.

	* Mercator/Segment.h, Mercator/Segment.cpp: Add convenience membe
	  m_size which is m_res + 1, so we don't have to keep doing that
	  calculation.

2003-07-06  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h: Re-name getSize() to getResolution()

	* Mercator/Surface.h, Mercator/Surface.cpp: Store a reference to the
	  the segment this is a layer of, and add an enumeration for indicating
	  the orientation of the texturing on this layer.

2003-07-06  Al Riddoch  <alriddoch@zepler.org>

	* Clean up configure.in a bit.

2003-07-05 Damien McGinnes
        
	* Mercator/TerrainMod.h: added a CraterTerrainMod that subtracts a 
	  sphere from the terrain.

2003-07-03  Al Riddoch  <alriddoch@zepler.org>

	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.
